--- a/src/modules/shared/components/header/Header.module.scss
+++ b/src/modules/shared/components/header/Header.module.scss
@@ -1,6 +1,6 @@
-.hello {
-  color: red;
-  &__item {
-    background-color: $accent-color;
-  }
-}
+// .hello {
+//   color: red;
+//   &__item {
+//     background-color: $accent-color;
+//   }
+// }
