--- a/src/scssStyles/_reset.scss
+++ b/src/scssStyles/_reset.scss
@@ -48,3 +48,17 @@ ol,
 ul {
   list-style: none;
 }
+
+button {
+  border: none;
+  margin: 0;
+  padding: 0;
+  width: auto;
+  overflow: visible;
+
+  background: transparent;
+
+  /* inherit font & color from ancestor */
+  color: inherit;
+  font: inherit;
+}
