trying to fix commit

--- a/src/modules/shared/components/header/Header.module.scss
+++ b/src/modules/shared/components/header/Header.module.scss
@@ -1,5 +1,5 @@
 @import '../../../../scssStyles/colors';
-@import '../../../../scssStyles/_sizes';
+@import '../../../../scssStyles/sizes';
 @import '../../../../scssStyles/mixins';
 
 .header {
