--- a/src/modules/HomePage/BrandNewModelsSlider/cardExampleStyle/styles/index.scss
+++ b/src/modules/HomePage/BrandNewModelsSlider/cardExampleStyle/styles/index.scss
@@ -1,3 +1,3 @@
-@import "./reset.scss";
-@import "./vars.scss";
-@import "./card.scss";
+@import './reset.scss';
+@import './vars.scss';
+@import './card.scss';
