--- a/src/modules/HomePage/BrandNewModelsSlider/cardExampleStyle/styles/reset.scss
+++ b/src/modules/HomePage/BrandNewModelsSlider/cardExampleStyle/styles/reset.scss
@@ -1,11 +1,11 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:regular,500,700);
-@import "./_vars.scss";
+@import './_vars.scss';
 
 html,
 body {
   color: $main--accent;
   box-sizing: border-box;
-  font-family: "Roboto", "Arial", sans-serif;
+  font-family: 'Roboto', 'Arial', sans-serif;
   font-weight: 300;
   font-size: 12px;
   line-height: 14px;
@@ -14,7 +14,6 @@ body {
 ul,
 li {
   list-style: none;
-
 }
 
 a {
