--- a/src/scssStyles/_typography.scss
+++ b/src/scssStyles/_typography.scss
@@ -1,3 +1,5 @@
+@import './mixins';
+
 @font-face {
   font-family: 'Mont';
   font-weight: 400;
@@ -16,4 +18,94 @@
   font-weight: 700;
   font-style: normal;
   src: url(../fonts/Mont-Bold.ttf);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+button {
+  font-family: 'Mont';
+}
+
+h1 {
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 41px;
+  letter-spacing: -0.01em;
+}
+
+h2 {
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 31px;
+  letter-spacing: 0;
+}
+
+h3 {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 26px;
+  letter-spacing: 0;
+}
+
+h4 {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 20px;
+  letter-spacing: 0;
+}
+
+h5 {
+  font-weight: 700;
+  font-size: 12px;
+  line-height: normal;
+  letter-spacing: 0.04em;
+}
+
+p {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 21px;
+  letter-spacing: 0;
+}
+
+button {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 21px;
+  letter-spacing: 0;
+}
+
+@include onTablet {
+  h1 {
+    font-size: 48px;
+    line-height: 56px;
+  }
+
+  h2 {
+    font-size: 32px;
+    line-height: 41px;
+    letter-spacing: -0.01em;
+  }
+
+  h3 {
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 31px;
+  }
+
+  h4 {
+    font-size: 20px;
+    line-height: 26px;
+  }
+}
+
+@include onDesktop {
+  p {
+    font-weight: 500;
+  }
 }
