--- a/src/scssStyles/blocks/_container.scss
+++ b/src/scssStyles/blocks/_container.scss
@@ -3,4 +3,14 @@
 @mixin homePageContainer {
   max-width: 1200px;
   margin: 0 auto;
+  padding-inline: 32px;
+
+  @include onTablet {
+    max-width: 639px;
+    padding-inline: 24px;
+  }
+
+  @include onMobile {
+    max-width: 319px;
+  }
 }
