--- a/src/modules/shared/components/header/Header.module.scss
+++ b/src/modules/shared/components/header/Header.module.scss
@@ -12,6 +12,8 @@
   align-items: center;
   justify-content: space-between;
   border: 1px solid $icons-color;
+  background-color: $white-color;
+  z-index: 1;
 }
 
 .logo {
@@ -113,6 +115,7 @@
 }
 
 .navbar {
+  display: grid;
   @include onDesktopGrid;
 
   @media (max-width: 1199px) {
@@ -143,11 +146,14 @@
   }
   // BURGER MENU(ACTIVE)
   &__active {
+    padding-top: 60px;
     padding-inline: 25px;
     display: flex;
     gap: 64px;
     align-items: center;
     transition: top 0.4s ease;
+    background-color: $white-color;
+    z-index: 1;
     @media (max-width: 639px) {
       display: flex;
       align-items: center;
@@ -155,7 +161,7 @@
       position: absolute;
       height: 90vh;
       width: 100%;
-      top: 125px;
+      top: 75px;
       bottom: 0;
       left: 0;
       flex-direction: column;
