--- a/src/modules/HomePage/MainSlider/MainSlider.module.scss
+++ b/src/modules/HomePage/MainSlider/MainSlider.module.scss
@@ -1,249 +1,246 @@
 @import '../../../scssStyles/reset';
 @import './Slider_mixins.scss';
 
-
-
 .Mcontainer {
-    max-width: 100vw;
-    margin: auto;
+  max-width: 100vw;
+  margin: auto;
 }
 
 .container {
-    @include onTablet {
-        max-width: 490px;
-        margin: auto;
-    }
+  @include onTablet {
+    max-width: 490px;
+    margin: auto;
+  }
 
-    @include onDesktop {
-        max-width: 1040px;
-        margin: auto;
-    }
+  @include onDesktop {
+    max-width: 1040px;
+    margin: auto;
+  }
 }
 
 .mobileVersion {
-
-    aspect-ratio: 1 / 1;
+  aspect-ratio: 1 / 1;
 }
 
 .mobContent {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
-
 .card {
+  @include onTablet {
+    height: 189px;
+  }
+
+  @include onDesktop {
+    height: 400px;
+  }
+
+  overflow: hidden;
+  background-color: #000;
+  display: flex;
+  border: 1px solid #000;
+  box-sizing: border-box;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+  border-radius: 5px;
+
+  &_box {
+    display: flex;
+    background-color: red;
+
     @include onTablet {
-        height: 189px;
+      height: 178px;
+      width: 45%;
+      margin-left: 5px;
     }
 
     @include onDesktop {
-        height: 400px;
+      height: 376px;
+      width: 45%;
+      margin-left: 12px;
     }
 
-    overflow: hidden;
-    background-color: #000;
-    display: flex;
     border: 1px solid #000;
     box-sizing: border-box;
+    border-radius: 15px;
+    background-color: #222;
+    margin-left: 12px;
     align-items: center;
-    flex-direction: row;
-    justify-content: space-between;
-    border-radius: 5px;
+    flex-direction: column;
 
-    &_box {
-        display: flex;
-        background-color: red;
+    &_text {
+      @include onTablet {
+        margin-top: 11px;
+        font-size: 20px;
+      }
 
-        @include onTablet {
-            height: 178px;
-            width: 45%;
-            margin-left: 5px;
-        }
+      @include onDesktop {
+        margin-top: 40px;
+        font-size: 50px;
+      }
 
-        @include onDesktop {
-            height: 376px;
-            width: 45%;
-            margin-left: 12px;
-        }
-
-
-
-        border: 1px solid #000;
-        box-sizing: border-box;
-        border-radius: 15px;
-        background-color: #222;
-        margin-left: 12px;
-        align-items: center;
-        flex-direction: column;
-
-        &_text {
-            @include onTablet {
-                margin-top: 11px;
-                font-size: 20px;
-            }
-
-            @include onDesktop {
-                margin-top: 40px;
-                font-size: 50px;
-            }
-
-            display: flex;
-            font-family: 'Mont';
-            background: -webkit-linear-gradient(75deg, #891CE8 -22.43%, #7560FA 35.22%, #E963FF 100.1%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            font-weight: 800;
-        }
-
-
-        &_Sub_text {
-            @include onTablet {
-                font-size: 8px;
-                margin-top: 10px;
-            }
-
-            @include onDesktop {
-                font-size: 20px;
-                margin-top: 15px;
-            }
-
-            color: #AEAEAE;
-            font-family: Mont;
-            font-style: normal;
-            font-weight: 300;
-            line-height: normal;
-        }
-
+      display: flex;
+      font-family: 'Mont';
+      background: -webkit-linear-gradient(
+        75deg,
+        #891ce8 -22.43%,
+        #7560fa 35.22%,
+        #e963ff 100.1%
+      );
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      font-weight: 800;
     }
 
-    &_button {
-        height: 20%;
-        width: 70%;
-        display: block;
-        margin-top: 90px;
+    &_Sub_text {
+      @include onTablet {
+        font-size: 8px;
+        margin-top: 10px;
+      }
 
-        &_text {
-            @include onTablet {
-                margin-top: 40px;
-                font-size: 7px;
-                border-radius: 25px;
-                border: 1px solid #444;
-            }
+      @include onDesktop {
+        font-size: 20px;
+        margin-top: 15px;
+      }
 
-            @include onDesktop {
-                margin-top: 80px;
-                font-size: 15px;
-                border-radius: 50px;
-                border: 2px solid #444;
-            }
-
-            display: flex;
-            width: 50%;
-            height: 20%;
-            background-color: transparent;
-            justify-content: center;
-            align-items: center;
-            border-radius: 50px;
-            box-sizing: border-box;
-            color: #FFF;
-            text-align: center;
-            font-family: Mont;
-            font-style: normal;
-            font-weight: 400;
-            line-height: normal;
-            text-transform: uppercase;
-            transition: 300ms;
-
-            &:hover {
-                border: 0;
-                cursor: pointer;
-                transform: translateY(-4px);
-                background: -webkit-linear-gradient(75deg, #891CE8 -22.43%, #7560FA 35.22%, #E963FF 100.1%);
-            }
-        }
+      color: #aeaeae;
+      font-family: Mont;
+      font-style: normal;
+      font-weight: 300;
+      line-height: normal;
     }
+  }
 
-    &_img {
-        @include onTablet {
-            width: 254px;
-            height: 100px;
-        }
+  &_button {
+    height: 20%;
+    width: 70%;
+    display: block;
+    margin-top: 90px;
 
-        @include onDesktop {
-            width: 550px;
-            height: 300px;
-        }
+    &_text {
+      @include onTablet {
+        margin-top: 40px;
+        font-size: 7px;
+        border-radius: 25px;
+        border: 1px solid #444;
+      }
 
-        &:hover {
-            transform: scale(1.1);
-            cursor: pointer;
-        }
-
-
-
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        transition: 500ms;
-
-        &_content {
-            @include onTablet {
-                object-fit: contain;
-            }
-
-            @include onDesktop {
-                object-fit: fill;
-            }
-
-            width: 80%;
-            height: 100%;
-        }
-
-
-    }
-
-    &_item {
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-    }
-
-    &_promo {
-        @include onTablet {
-            margin-top: 20px;
-            font-size: 15px;
-        }
-
-        @include onDesktop {
-            margin-top: 30px;
-            font-size: 30px;
-        }
-
-        color: white;
-        text-align: center;
-        font-size: 30px;
-        font-style: normal;
-        font-weight: 590;
-    }
-
-    &_sub_promo {
-        @include onTablet {
-            margin-top: 3px;
-            font-size: 10px;
-            ;
-        }
-
-        @include onDesktop {
-            margin-top: 5px;
-            font-size: 15px;
-        }
-
-        color: #9B9B9B;
-        text-align: center;
+      @include onDesktop {
+        margin-top: 80px;
         font-size: 15px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: normal;
+        border-radius: 50px;
+        border: 2px solid #444;
+      }
+
+      display: flex;
+      width: 50%;
+      height: 20%;
+      background-color: transparent;
+      justify-content: center;
+      align-items: center;
+      border-radius: 50px;
+      box-sizing: border-box;
+      color: #fff;
+      text-align: center;
+      font-family: Mont;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
+      text-transform: uppercase;
+      transition: 300ms;
+
+      &:hover {
+        border: 0;
+        cursor: pointer;
+        transform: translateY(-4px);
+        background: -webkit-linear-gradient(
+          75deg,
+          #891ce8 -22.43%,
+          #7560fa 35.22%,
+          #e963ff 100.1%
+        );
+      }
     }
+  }
+
+  &_img {
+    @include onTablet {
+      width: 254px;
+      height: 100px;
+    }
+
+    @include onDesktop {
+      width: 550px;
+      height: 300px;
+    }
+
+    &:hover {
+      transform: scale(1.1);
+      cursor: pointer;
+    }
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 500ms;
+
+    &_content {
+      @include onTablet {
+        object-fit: contain;
+      }
+
+      @include onDesktop {
+        object-fit: fill;
+      }
+
+      width: 80%;
+      height: 100%;
+    }
+  }
+
+  &_item {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  &_promo {
+    @include onTablet {
+      margin-top: 20px;
+      font-size: 15px;
+    }
+
+    @include onDesktop {
+      margin-top: 30px;
+      font-size: 30px;
+    }
+
+    color: white;
+    text-align: center;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 590;
+  }
+
+  &_sub_promo {
+    @include onTablet {
+      margin-top: 3px;
+      font-size: 10px;
+    }
+
+    @include onDesktop {
+      margin-top: 5px;
+      font-size: 15px;
+    }
+
+    color: #9b9b9b;
+    text-align: center;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
 }
