--- a/src/scssStyles/blocks/_container.scss
+++ b/src/scssStyles/blocks/_container.scss
@@ -4,6 +4,7 @@
   max-width: 1200px;
   margin: 0 auto;
   padding-inline: 32px;
+  padding-top: 95px;
 
   @include onTablet {
     max-width: 639px;
