--- a/src/modules/shared/components/header/Header.module.scss
+++ b/src/modules/shared/components/header/Header.module.scss
@@ -32,7 +32,7 @@
       top: 0;
       right: 0;
       display: block;
-      background-image: url('../../icons/union.svg');
+      background-image: url('../../icons/Union.svg');
     }
   }
 
@@ -90,7 +90,7 @@
   }
 
   &__cross {
-    background-image: url('../../icons/close.svg');
+    background-image: url('../../icons/Close.svg');
   }
 
   &__menu,
