--- a/src/modules/HomePage/HomePage.module.scss
+++ b/src/modules/HomePage/HomePage.module.scss
@@ -1,6 +1,6 @@
 @import '../../scssStyles/blocks/_container';
 
 .home__page {
-  @include homePageContainer;
+  // @include homePageContainer;
   position: relative;
 }
