resolve_github_conflicts

--- a/src/modules/shared/components/header/Header.module.scss
+++ b/src/modules/shared/components/header/Header.module.scss
@@ -1,6 +1,6 @@
-@import '../../../../scssStyles/colors';
-@import '../../../../scssStyles/_sizes';
-@import '../../../../scssStyles/mixins';
+@import "../../../../scssStyles/colors";
+@import "../../../../scssStyles/_sizes";
+@import "../../../../scssStyles/mixins";
 
 .header {
   position: fixed;
