--- a/src/modules/Button/Button.module.scss
+++ b/src/modules/Button/Button.module.scss
@@ -25,11 +25,13 @@
   &:hover {
     box-shadow: 0 3px 13px 0 rgba(23, 32, 49, 0.4);
     transition-duration: 0.5s;
+    cursor: pointer;
   }
 
-  &:active {
+  &:active,
+  &__active{
     border: 1px solid $elements-color;
-    background-color: $white-color;
+    background-color: transparent;
     color: $accent-color;
     transition-duration: 0.5s;
   }
