favourites folder changed, fixed an issue with favourites button

--- a/src/modules/FavouritesPage/Favourites.module.scss
+++ b/src/modules/FavouritesPage/Favourites.module.scss
@@ -1,5 +1,5 @@
-@import "../../../../../scssStyles/mixins";
-@import"../../../../HomePage/MainSlider/Slider_mixins.scss";
+
+@import"../HomePage/MainSlider/Slider_mixins.scss";
 
 .favourite_Header {
 
