--- a/src/modules/HomePage/MainSlider/MainSlider.module.scss
+++ b/src/modules/HomePage/MainSlider/MainSlider.module.scss
@@ -80,7 +80,7 @@
         margin-top: 40px;
         font-size: 50px;
       }
-
+      line-height: unset;
       display: flex;
       font-family: 'Mont';
       background: -webkit-linear-gradient(
