--- a/src/modules/shared/components/SliderComponent/SliderComponentArrows.scss
+++ b/src/modules/shared/components/SliderComponent/SliderComponentArrows.scss
@@ -1,5 +1,6 @@
-@import '../../../scssStyles/sizes';
-@import '../../../scssStyles/colors';
+@import '../../../../scssStyles/sizes';
+@import '../../../../scssStyles/colors';
+@import '../../../../scssStyles/mixins';
 
 .slick-arrow {
   position: relative;
@@ -15,7 +16,7 @@
 
 .slick-next,
 .slick-prev {
-  background-image: url('../../../modules/shared/icons/chevronArrowRight.svg');
+  background-image: url('../../icons/chevronArrowRight.svg');
   background-position: center;
   background-repeat: no-repeat;
   position: absolute;
@@ -27,14 +28,14 @@
   &:focus {
     border: 1px solid $primary-color;
     color: $primary-color;
-    background-image: url('../../../modules/shared/icons/chevronArrowRightActive.svg');
+    background-image: url('../../icons/chevronArrowRightActive.svg');
     background-position: center;
     background-repeat: no-repeat;
   }
 }
 
 .slick-prev {
-  background-image: url('../../../modules/shared/icons/chevronArrowLeft.svg');
+  background-image: url('../../icons/chevronArrowLeft.svg');
   left: unset;
   right: 46px;
 
@@ -43,7 +44,7 @@
   &:focus {
     border: 1px solid $primary-color;
     color: $primary-color;
-    background-image: url('../../../modules/shared/icons/chevronArrowLeftActive.svg');
+    background-image: url('../../icons/chevronArrowLeftActive.svg');
     background-position: center;
     background-repeat: no-repeat;
   }
