--- a/src/modules/CartPage/CartPage.module.scss
+++ b/src/modules/CartPage/CartPage.module.scss
@@ -5,6 +5,8 @@
   display: flex;
   flex-direction: column;
   background-color: $hover-bg-color;
+  height: 100vh;
+  
 
   max-width: 1200px;
   margin: 0 auto;
@@ -21,15 +23,22 @@
     align-items: center;
     text-decoration: none;
     margin-bottom: 16px;
+    @include onTablet {
+      font-size: 24px;
+  }
+    
   }
 
   &__backBtn {
     font-family: Mont;
-    font-size: 12px;
+    font-size: 16px;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
     color: $secondary-color;
+    @include onTablet {
+      font-size: 12px;
+  }
     &:hover {
       color: $primary-color;
     }
@@ -37,12 +46,17 @@
 
   &__title {
     font-family: Mont;
-    font-size: 32px;
+    font-size: 48px;
     font-style: normal;
     font-weight: 800;
     line-height: 41px;
     letter-spacing: -0.32px;
     margin-bottom: 32px;
+    letter-spacing: -0.48px;
+    @include onTablet {
+     font-size: 32px;
+    }
+    
   }
 
   &__container {
