--- a/src/modules/CartPage/CartPage.module.scss
+++ b/src/modules/CartPage/CartPage.module.scss
@@ -5,9 +5,8 @@
   display: flex;
   flex-direction: column;
   background-color: $hover-bg-color;
-  height: 100vh;
+  height: 90vh;
   
-
   max-width: 1200px;
   margin: 0 auto;
   padding-inline: 32px;
@@ -19,6 +18,7 @@
   }
 
   &__linkBack {
+        margin-top: 64px; // temporal 💥!! jast for Cart
     display: flex;
     align-items: center;
     text-decoration: none;
@@ -56,6 +56,7 @@
     @include onTablet {
      font-size: 32px;
     }
+
     
   }
 
