--- a/src/modules/CartPage/cartTotal/CartITotal.module.scss
+++ b/src/modules/CartPage/cartTotal/CartITotal.module.scss
@@ -18,6 +18,9 @@
   align-items: center;
   min-width: 200px;
   background-color: $white-color;
+  &:hover {
+    box-shadow: 0 2px 15px 0 rgba(0, 0, 0, 0.1);
+  }
 
   &__sum {
     font-family: Mont;
