--- a/src/modules/CartPage/cartItem/CartItem.module.scss
+++ b/src/modules/CartPage/cartItem/CartItem.module.scss
@@ -21,6 +21,9 @@
   border-radius: 16px;
   min-width: 200px;
   background-color: $white-color;
+  &:hover {
+    box-shadow: 0 2px 15px 0 rgba(0, 0, 0, 0.1);
+  }
 
   @include onTablet {
     flex-direction: row;
