--- a/src/modules/shared/components/HeaderComponent/Header.module.scss
+++ b/src/modules/shared/components/HeaderComponent/Header.module.scss
@@ -33,7 +33,7 @@
       top: 0;
       right: 0;
       display: block;
-      background-image: url('../../icons/Union.svg');
+      background-image: url('../../icons/union-img.svg');
     }
   }
 
@@ -91,7 +91,7 @@
   }
 
   &__cross {
-    background-image: url('../../icons/Close.svg');
+    background-image: url('../../icons/close-img.svg');
   }
 
   &__menu,
