--- a/src/modules/CartPage/CartPage.module.scss
+++ b/src/modules/CartPage/CartPage.module.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   background-color: $hover-bg-color;
-  height: 90vh;
+  min-height: 90vh; // temporal 💥!! 
   
   max-width: 1200px;
   margin: 0 auto;
