--- a/src/modules/FavouritesPage/Favourites.module.scss
+++ b/src/modules/FavouritesPage/Favourites.module.scss
@@ -1,4 +1,4 @@
-@import '../HomePage/MainSlider/Slider_mixins.scss';
+@import "../HomePage/MainSlider/Slider_mixins.scss";
 
 .favourite_Header {
   @include onMobile {
