--- a/src/scssStyles/_mixins.scss
+++ b/src/scssStyles/_mixins.scss
@@ -36,3 +36,18 @@ $column--size: 1fr;
     @content;
   }
 }
+
+
+
+
+// @mixin onTablet {
+//   @media (min-width: 640px) {
+//     @content;
+//   }
+// }
+
+// @mixin onDesktop {
+//   @media (min-width: 1200px) {
+//     @content;
+//   }
+// }
