--- a/src/modules/OfStock/OfStock.module.scss
+++ b/src/modules/OfStock/OfStock.module.scss
@@ -3,26 +3,31 @@
 @import '../../scssStyles/typography';
 @import '../../scssStyles/mixins';
 
+$primary-text-color: #2d3748;
+
 .OfStock {
   // height: calc(100vh - 96px - 32px);
   width: 100%;
-  height: 80vh;
+  height: auto;;
   margin: 0 auto;
-  padding: 32px 0;
 
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  // justify-content: space-between;
 
   &__text {
-    max-width: 512px;
-    margin: 33vh auto;
-    text-align: center;
+    color: $secondary-color;
     display: flex;
     flex-direction: column;
-    gap: 12px;
-  }
+    text-align: center;
+    // max-width: 512px;
+    // margin: 33vh auto;
+    // gap: 12px;
 
-  &__desert {
+    & :first-child{
+      color:  $primary-text-color;
+      font-size: 60px;
+      font-weight: 600;
+    }
   }
 }
