--- a/src/modules/PhonePage/PhonePage.module.scss
+++ b/src/modules/PhonePage/PhonePage.module.scss
@@ -16,7 +16,7 @@
   margin: 150px auto;
   max-width: 1200px;
 
-  padding: 16px;
+  padding: 16px 0;
 
   &__header {
     font-size: 32px;
@@ -34,11 +34,11 @@
   }
 
   @media (min-width: 640px) {
-    padding: 24px;
+    padding: 24px 0;
   }
 
   @media (min-width: 1200px) {
-    padding: 32px;
+    padding: 32px 0;
   }
 }
 
