--- a/src/scssStyles/blocks/_page.scss
+++ b/src/scssStyles/blocks/_page.scss
@@ -1,10 +1,11 @@
 .page {
-    &__content {
-        display: flex;
-        flex-direction: column;
-        min-height: 100vh;
-    }
-    &__main {
-        flex-grow: 1;
-    }
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+
+  &__main {
+    flex-grow: 1;
+    margin: 0 auto;
+    max-width: 1136px;
+  }
 }
