--- a/src/modules/PhoneDetailsPage/PhoneDetailsPageSlider/PhoneDetailsPageSlider.scss
+++ b/src/modules/PhoneDetailsPage/PhoneDetailsPageSlider/PhoneDetailsPageSlider.scss
@@ -24,14 +24,15 @@ $mobile-max-width: 480px;
 }
 
 .slider-container {
+  position: relative;
   height: 288px;
   width: 288px;
   margin: 0 auto;
 
   @include onTablet {
     @include onTabletGrid;
-    width: 287px;
-    height: 287px;
+    width: 273px;
+    height: 273px;
   }
 
   @include onDesktop {
@@ -59,39 +60,6 @@ $mobile-max-width: 480px;
     @include onDesktopGrid;
     width: 80px;
     height: 80px;
-  }
-}
-
-.head {
-  font-size: 32px;
-  width: 1200px;
-  margin-bottom: 40px;
-  font-family: 'Mont';
-  font-weight: 800;
-  line-height: 41px;
-  margin: 0 auto 40px;
-
-  @include onTablet {
-    @include onTabletGrid;
-    width: 592px;
-  }
-
-  @include onMobile {
-    @include onMobileGrid;
-    margin-bottom: 32px;
-    width: 288px;
-    line-height: 30.8px;
-    font-size: 22px;
-  }
-
-  @include onDesktop {
-    @include onDesktopGrid;
-    font-size: 32px;
-    width: 1136px;
-    margin-bottom: 40px;
-    font-family: 'Mont';
-    font-weight: 800;
-    line-height: 41px;
   }
 }
 
@@ -127,7 +95,7 @@ $mobile-max-width: 480px;
   transform: translateY(-750%);
   @include onMobile {
     @include onMobileGrid;
-    margin: 18px;
+    margin: 16px 8px 0 29px;
   }
 
   @include onTablet {
